src/assets/main.scss
@use 'bulma/sass/utilities/derived-variables' with (
  $primary: hsl(261.6, 51.87%, 47.25%),
  $link: hsl(261.6, 51.87%, 47.25%)
);
@use 'bulma/sass/utilities/css-variables' as cv;
@use 'bulma/sass';

@use 'animations.scss';

html {
  overflow: auto;
}

main.full-h {
  min-height: 100vh;
  overflow-x: hidden;
}

.modal-content {
  padding: 20px;
}

.fixed-center {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

* {
  scrollbar-width: thin;
  scrollbar-color: hsl(0, 0%, 90%) transparent;
}

/** Override background color to be darker on dark mode */
@include cv.system-theme($name: 'dark') {
  .has-background-primary.soft-if-dark,
  .is-primary.soft-if-dark {
    background-color: var(--bulma-primary-soft) !important;
  }

  * {
    scrollbar-color: hsl(0, 0%, 20%) transparent;
  }
}

